--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,8 @@ input[type="email"]:not(.browser-default):focus:not([readonly]) + label,
 input[type="password"]:not(.browser-default):focus:not([readonly]) + label {
   color: #3c3c3c !important;
 }
+
+.project-list {
+  overflow-y: scroll;
+  max-height: 40em;
+}
